05_ponteiros/pont_11/Resultados/CaioFraga/main/result_compilation.txt
main.c: In function ‘main’:
main.c:6:14: warning: initialization of ‘char’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
    6 |     char c = "";
      |              ^~
main.c:14:5: warning: statement with no effect [-Wunused-value]
   14 |     (float) num1;
      |     ^~~~~~~~~~~~
main.c:15:5: warning: statement with no effect [-Wunused-value]
   15 |     (float) num2;
      |     ^~~~~~~~~~~~
main.c:18:15: warning: comparison between pointer and integer
   18 |         if (c == "a"){
      |               ^~
main.c:18:15: warning: comparison with string literal results in unspecified behavior [-Waddress]
main.c:19:77: error: ‘soma’ undeclared (first use in this function)
   19 |             printf("(%.2f + %.2f) = %.2f", num1, num2, Calcular(num1, num2, soma));
      |                                                                             ^~~~
main.c:19:77: note: each undeclared identifier is reported only once for each function it appears in
main.c:22:15: warning: comparison between pointer and integer
   22 |         if (c == "s"){
      |               ^~
main.c:22:15: warning: comparison with string literal results in unspecified behavior [-Waddress]
main.c:23:77: error: ‘subtracao’ undeclared (first use in this function)
   23 |             printf("(%.2f - %.2f) = %.2f", num1, num2, Calcular(num1, num2, subtracao));
      |                                                                             ^~~~~~~~~
main.c:26:15: warning: comparison between pointer and integer
   26 |         if (c == "m"){
      |               ^~
main.c:26:15: warning: comparison with string literal results in unspecified behavior [-Waddress]
main.c:27:77: error: ‘multiplicacao’ undeclared (first use in this function)
   27 |             printf("(%.2f x %.2f) = %.2f", num1, num2, Calcular(num1, num2, multiplicacao));
      |                                                                             ^~~~~~~~~~~~~
main.c:30:15: warning: comparison between pointer and integer
   30 |         if (c == "d"){
      |               ^~
main.c:30:15: warning: comparison with string literal results in unspecified behavior [-Waddress]
main.c:31:77: error: ‘divisao’ undeclared (first use in this function)
   31 |             printf("(%.2f / %.2f) = %.2f", num1, num2, Calcular(num1, num2, divisao));
      |                                                                             ^~~~~~~
